--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
     <link rel="icon" href="images/favicon.png">
 
+    <!-- To display nice icons we're including Google Icons. -->
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
 
     <link rel="stylesheet" href="css/reset.css">
@@ -19,16 +20,21 @@
 
     <header>
         <div class="container">
+            <!-- We're attatching a function to this button to toggle dark mode -->
             <button onclick="ToggleDarkMode()">
+                <!-- This span is the format of google icons. The text 'dark_mode' will be magically substituted with the icon. We've also added an id to make it easy to grab this span, because we'll need to change the icon when we click the button. -->
                 <span id="btn_darkmode" class="material-symbols-outlined">dark_mode</span>
             </button>
         </div>
     </header>
 
     <main>
+            <!-- We're attatching a function to this button to toggle dark mode -->
         <h1>Cheetoes - Cheetahs & Volcanos!</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio mollitia autem ipsa deleniti doloribus iure quaerat porro voluptatum minus exercitationem numquam aspernatur harum dolor eaque, facilis perspiciatis inventore, nostrum laboriosam.</p>
 
+
+        <!-- The structure of this gallery is a div that acts as the container, with an id. This is the element we'll be hooking into with our script. Inside, all we need are our images, and a data attribute that provides the filename of the fullsize version that we want to display when the image is clicked. This makes it very easy to add new images. -->
         <!-- Use https://derivv.com/ to make automatic crops of your high-res images -->
         <div id="gallery" class="gallery">
             <img src="images/volcano-1-500x.webp" alt="" data-full_image="volcano-1.webp">
@@ -37,13 +43,18 @@
             <img src="images/cheetah-500x.avif" alt="" data-full_image="cheetah.avif">
         </div>
 
+
+        <!-- This carousel is a bit more complicated. We have the same sort of container div. The images go in their own div to keep them organized and separate from the buttons. -->
         <div id="carousel" class="carousel">
             <div class="images">
                 <img src="images/volcano-1.webp" alt="Twin volcanos erupt">
                 <img src="images/volcano-2.webp" alt="Big volcano eruption">
                 <img src="images/volcano-3.jpeg" alt="Smoking arctic volcano">
-            </div>
+            </div>        
+
+            <!-- The buttons will be styled to sit over the images. They each have their own function call on click. -->
             <button class="btnLeft" onclick="ReverseSlide()">
+                <!-- Again, we've got the same google icons spans to display nice arrows. -->
                 <span class="material-symbols-outlined">chevron_left</span>
             </button>
             <button class="btnRight" onclick="AdvanceSlide()">
@@ -52,6 +63,7 @@
         </div>
     </main>
 
+    <!-- Scripts are always included at the end of the project. -->
     <script src="scripts/dark-mode.js"></script>
     <script src="scripts/gallery.js"></script>
     <script src="scripts/carousel.js"></script>
